cabal-version:      3.0
name:               plutarch-safe-money
version:            1.0.0
synopsis:           Safer money handling on-chain
description:        Safer money handling in Plutarch.
homepage:           https://github.com/Liqwid-Labs/plutarch-safe-money
bug-reports:        https://github.com/Liqwid-Labs/plutarch-safe-money/issues
license:            Apache-2.0
license-file:       LICENSE
author:             Koz Ross
maintainer:         Koz Ross <koz@mlabs.city>
copyright:          (C) 2022 Liqwid Labs
category:           Test
build-type:         Simple
tested-with:        GHC ==9.2.1
extra-source-files:
  LICENSE
  README.md

source-repository head
  type:     git
  location: https://github.com/Liqwid-Labs/plutarch-safe-money

-- Common sections

common common-lang
  ghc-options:
    -Wall -Wcompat -Wincomplete-uni-patterns
    -Wincomplete-record-updates -Wredundant-constraints
    -Wmissing-export-lists -Wmissing-deriving-strategies -Werror

  build-depends:
    , base      ^>=4.16
    , plutarch

  default-extensions:
    BangPatterns
    BinaryLiterals
    ConstraintKinds
    DataKinds
    DeriveTraversable
    DerivingVia
    EmptyCase
    FlexibleContexts
    FlexibleInstances
    GeneralisedNewtypeDeriving
    HexFloatLiterals
    InstanceSigs
    KindSignatures
    LambdaCase
    MultiParamTypeClasses
    NumericUnderscores
    OverloadedStrings
    ScopedTypeVariables
    StandaloneDeriving
    TupleSections
    TypeOperators

  default-language:   Haskell2010

-- Libraries

library
  import:          common-lang
  exposed-modules: Plutarch.SafeMoney
  build-depends:
    , generics-sop
    , liqwid-plutarch-extra
    , plutarch
    , plutarch-numeric
    , plutus-ledger-api
    , plutus-tx
    , tagged

  hs-source-dirs:  src
